ensured tag cards do not overflow their container

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -25,6 +25,7 @@
 
 .badge.is-tag {
   margin: 0.1rem;
+  max-width: 100%;
 }
 
 h1 .badge.is-tag.is-master-tag {
